--- a/data/heroes/green/4/Lionstring.yml
+++ b/data/heroes/green/4/Lionstring.yml
@@ -20,6 +20,6 @@ passives:
   - >-
     Resist Poison: This character has innate resistance against Poison.
   - >-
-    Share Received Damage: 20% of damage received by this charater is shared 
+    Share Received Damage: 20% of damage received by this character is shared 
     with other allies.
 image: https://i.imgur.com/M9HK4qH.jpg
