--- a/data/heroes/blue/5/Rian.yml
+++ b/data/heroes/blue/5/Rian.yml
@@ -21,5 +21,5 @@ types:
   - Self HoT Stack
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/pgR8NJw.jpg
