--- a/data/heroes/blue/5/Starwalker.yml
+++ b/data/heroes/blue/5/Starwalker.yml
@@ -18,7 +18,7 @@ types:
   - Defense debuff
 passives:
   - >-
-    Share Received Damage: 20% of damage received by this charater is shared with other allies.
+    Share Received Damage: 20% of damage received by this character is shared with other allies.
   - >-
     Resist Poison: This character has innate resistance against Poison.
 image: https://i.imgur.com/GZxuVqX.jpg
