--- a/data/heroes/green/4/Orla.yml
+++ b/data/heroes/green/4/Orla.yml
@@ -20,5 +20,5 @@ types:
   - Stack
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/YWXxtDj.jpg
