--- a/data/heroes/green/5/Moonflower.yml
+++ b/data/heroes/green/5/Moonflower.yml
@@ -18,5 +18,5 @@ passives:
   - >-
     Resist Poison: This character has innate resistance against Poison.
   - >-
-    Share Received Damage: 20% of damage received by this charater is shared with other allies.
+    Share Received Damage: 20% of damage received by this character is shared with other allies.
 image: https://i.imgur.com/0xgP0mx.jpg
