--- a/data/heroes/purple/3/Maeve.yml
+++ b/data/heroes/purple/3/Maeve.yml
@@ -19,5 +19,5 @@ types:
   - Stack
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/vEp3yLs.jpg
