--- a/data/heroes/purple/5/Demilune.yml
+++ b/data/heroes/purple/5/Demilune.yml
@@ -21,5 +21,5 @@ passives:
   - >-
     Resist Poison: This character has innate resistance against Poison.
   - >-
-    Share Received Damage: 20% of damage received by this charater is shared  with other allies.
+    Share Received Damage: 20% of damage received by this character is shared  with other allies.
 image: https://i.imgur.com/h0XJ3CG.jpg
