--- a/data/heroes/purple/5/Senan.yml
+++ b/data/heroes/purple/5/Senan.yml
@@ -20,7 +20,7 @@ types:
   - Stacks
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/PYhKsHp.jpg
 costume:
   design: costume1
