--- a/data/heroes/purple/5/Tweedles.yml
+++ b/data/heroes/purple/5/Tweedles.yml
@@ -20,5 +20,5 @@ types:
   - Defense debuff
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/oaSASQ4.jpg
