--- a/data/heroes/red/3/Starswift.yml
+++ b/data/heroes/red/3/Starswift.yml
@@ -19,6 +19,6 @@ passives:
   - >-
     Resist Poison: This character has innate resistance against Poison.
   - >-
-    Share Received Damage: 20% of damage received by this charater is shared 
+    Share Received Damage: 20% of damage received by this character is shared 
     with other allies.
 image: https://i.imgur.com/M18GizO.jpg
