--- a/data/heroes/red/5/Black Caesar.yml
+++ b/data/heroes/red/5/Black Caesar.yml
@@ -19,5 +19,5 @@ types:
   - Attack Debuff Fiend
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/5f8UOBL.jpg
