--- a/data/heroes/red/5/Cinderella.yml
+++ b/data/heroes/red/5/Cinderella.yml
@@ -22,5 +22,5 @@ types:
   - Defense Debuff All
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/8MZHUmV.jpg
