--- a/data/heroes/red/5/Saoirse.yml
+++ b/data/heroes/red/5/Saoirse.yml
@@ -20,7 +20,7 @@ types:
   - Self HoT Stacks
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/pHj3rld.jpg
 costume:
   bonuses: 5/5/10/5
@@ -42,7 +42,7 @@ costume:
     - Self HoT Stacks
   passives:
     - >-
-      Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+      Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
     - >-
       Bleed on Special Skill: When this character casts their Special Skill, all enemies receive 452 Bleed damage over 4 turns.
   image: https://i.imgur.com/yHVhyhO.jpg
