--- a/data/heroes/yellow/5/Caitlin.yml
+++ b/data/heroes/yellow/5/Caitlin.yml
@@ -21,7 +21,7 @@ types:
   - Self HoT Stacks
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/ERb7z96.jpg
 costume:
   bonuses: 5/5/10/5
@@ -44,7 +44,7 @@ costume:
     - Self HoT Stacks
   passives:
     - >-
-      Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+      Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
     - >-
       Bleed on Special Skill: When this character casts their Special Skill, all enemies receive 528 Bleed damage over 4 turns.
   image: https://i.imgur.com/JgYBU3i.jpg
