--- a/data/heroes/yellow/5/Guardian Elephant.yml
+++ b/data/heroes/yellow/5/Guardian Elephant.yml
@@ -21,5 +21,5 @@ types:
   - Undispellable ailments
 passives:
   - >-
-    Resist Damage from Status Effects: This charater has innate resistance against incoming damage from status effects.
+    Resist Damage from Status Effects: This character has innate resistance against incoming damage from status effects.
 image: https://i.imgur.com/oi9Vymu.jpg
