--- a/data/heroes/blue/5/Lumi & Taiga.yml
+++ b/data/heroes/blue/5/Lumi & Taiga.yml
@@ -22,10 +22,10 @@ types:
 - Ally Damage Share
 passives:
 - "Enhanced Shields on Special: Passive Skill as attacking character"
-- " * Fire shields on the board become enhanced with +54% critical chance when this
+- " * Ice shields on the board become enhanced with +54% critical chance when this
   character casts their Special Skill."
 - "Passive Skill as defending character:"
-- " * Fire shields on the board become weakened with -47% accuracy when this character
+- " * Ice shields on the board become weakened with -47% accuracy when this character
   casts their Special Skill."
 - "Mark of the Titan Hunter: When this character casts their Special Skill, they mark
   a random enemy with a Hunting Flare for 4 turns. A target marked with a Hunting
