--- a/data/heroes/blue/4/Grumbl.yml
+++ b/data/heroes/blue/4/Grumbl.yml
@@ -17,6 +17,5 @@ types:
   - HoT
   - Cleanser
 passives:
-  - >-
-    Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%, and they resist all status ailment and mana reduction. This effect can't be dispelled.
+  - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%. They are also immune to all status ailmenta, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/h0Gvv51.jpg
