--- a/data/heroes/blue/5/Pophit.yml
+++ b/data/heroes/blue/5/Pophit.yml
@@ -17,6 +17,5 @@ types:
   - Hit 3
   - Softskin 2
 passives:
-  - >-
-    Gargoyle's Softskin: Every time this Gargoyle casts a Special SKill, their Softskin activates. The next 3 times they receive damage, it is reduced by -90%, and they resist all status ailments and mana reduction. This effect can't be dispelled.
+  - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 3 times they receive damage, it is reduced by -90%. They are also immune to all status ailmenta, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/Q0YpIYH.jpg
