--- a/data/heroes/green/5/Garten.yml
+++ b/data/heroes/green/5/Garten.yml
@@ -19,6 +19,5 @@ types:
   - Softskin 4
   - Healing debuff imunity
 passives:
-  - >-
-    Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 4 times they receive damage, it is reduced by -90%, and they resist all status ailment and mana reduction. This effect can't be dispelled.
+  - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 4 times they receive damage, it is reduced by -90%. They are also immune to all status ailmenta, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/8K8mMLw.jpg
