--- a/data/heroes/purple/5/Uwe.yml
+++ b/data/heroes/purple/5/Uwe.yml
@@ -16,6 +16,5 @@ types:
   - Hit 1
   - Chain
 passives:
-  - >-
-    Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%, and they resist all status ailment and mana reduction. This effect can't be dispelled.
+  - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%. They are also immune to all status ailmenta, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/KNSk9mz.jpg
