--- a/data/heroes/red/5/Guffa.yml
+++ b/data/heroes/red/5/Guffa.yml
@@ -19,6 +19,5 @@ types:
   - Softskin except self
   - Delayed Healer
 passives:
-  - >-
-    Gargoyle's Stoneskin: Every time this Gargoyle casts a Special Skill, their Stoneskin hardens. The next 5 times they receive damage, it is reduced by -90%, and they resist all status ailment and mana reduction. This effect can't be dispelled.
+  - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%. They are also immune to all status ailmenta, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/i3PGL4o.jpg
