--- a/data/heroes/red/5/Guffa.yml
+++ b/data/heroes/red/5/Guffa.yml
@@ -19,5 +19,5 @@ types:
   - Softskin except self
   - Delayed Healer
 passives:
-  - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%. They are also immune to all status ailmenta, mana reductions and Insanity. This effect can't be dispelled."
+  - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%. They are also immune to all status ailments, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/i3PGL4o.jpg
