--- a/data/heroes/blue/4/Choozen.yml
+++ b/data/heroes/blue/4/Choozen.yml
@@ -11,10 +11,10 @@ skill: Surprise Goo!
 effects:
   - Boosts health of the caster and nearby allies by 450. Boosted health can exceed max HP.
   - The caster and nearby allies get Sticky Surface for 3 turns. This effect can't be dispelled.
-  - "Sticky Surface: Steals 1 random dispellable buff or Growth from an attacking enemy. (Stolen dispellable buff or Growth effect is chosen by random. Sticky Surface is activated when any damage is received from an enemy. Each character with Sticky Surface can only steal one status effect buff or Growth effect per turn from normal attacks.)"
+  - 'Sticky Surface: Steals 1 random dispellable buff or Growth effect from an attacking enemy. (Stolen dispellable buff or Growth effect is chosen by random. Sticky Surface is activated when any damage is received from an enemy. Each character with Sticky Surface can only steal one status effect buff or Growth effect per turn from normal attacks.)'
 types:
   - Health Boost 3
-  - Sticky Surface 3
+  - Sticky Surface Buff 3
 passives:
   - >-
     Slime Minion Upon Defeat: When this character is defeated, they summon Slime Mega Minions to nearby allies with 50% HP and 40% attack inherited from this character.
