--- a/data/heroes/green/5/Fungustine.yml
+++ b/data/heroes/green/5/Fungustine.yml
@@ -11,14 +11,14 @@ skill: Revitalizing Sludge
 effects:
   - Boosts health of all allies by 1250. Boosted health can exceed max HP.
   - All allies get Sticky surface for 4 turns. This effect can't be dispelled.
-  - 'Sticky surface: Steals 1 random dispellable buff or Growth effect from an attacking enemy. (Each hero with Sticky Surface can only steal one status effect buff or Growth effect per turn from normal attacks.)'
+  - 'Sticky Surface: Steals 1 random dispellable buff or Growth effect from an attacking enemy. (Stolen dispellable buff or Growth effect is chosen by random. Sticky Surface is activated when any damage is received from an enemy. Each character with Sticky Surface can only steal one status effect buff or Growth effect per turn from normal attacks.)'
   - All allies get +30% defense for 4 turns.
   - All allies are immune to buff dispels and relocations for 4 turns. (This immunity also includes this effect itself.)
 types:
-  - Healt Boost all
-  - Sticky surface
-  - Defense buff
-  - Buff dispell immunity
+  - Health Boost All
+  - Sticky Surface Buff All
+  - Defense Buff All
+  - Buff Dispell Immunity All
 passives:
   - >-
     Slime Minion Upon Defeat: When this character is defeated, they summon Slime Mega Minions to nearby allies with 50% HP and 40% attack inherited from this character.
