--- a/data/heroes/green/5/Garten.yml
+++ b/data/heroes/green/5/Garten.yml
@@ -11,13 +11,13 @@ skill: Bone Club Party
 effects:
   - Boosts health of all allies by 700. Boosted health can exceed max HP.
   - Reduces max health of all enemies by 700. The effect is stronger against targets with boosted health. (Max health can't get lower than 30% of the original max health. Any boosted health is reduced by an additional 700.
-  - All allies except the caster receive Softskin. (The next time they receive damage, it is reduced by -90%, and they resist all status ailments and mana reduction. This effect can't be dispelled.)
+  - All allies except the caster receive Softskin. (The next time they receive damage, it is reduced by -90%. They are also immune to all status ailments, mana reductions and Insanity. This effect can't be dispelled.)
   - All allies are immune to new status ailments that affect healing for 4 turns. Removes status ailments that affect healing from allies.
 types:
-  - Overhealer
-  - Health reduction
+  - Health Boost All
+  - Health Reduction All
   - Softskin 4
-  - Healing debuff imunity
+  - Healing Debuff Imunity All
 passives:
   - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 4 times they receive damage, it is reduced by -90%. They are also immune to all status ailments, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/8K8mMLw.jpg
