--- a/data/heroes/green/5/Verdigoo.yml
+++ b/data/heroes/green/5/Verdigoo.yml
@@ -11,10 +11,10 @@ skill: Judgement of Goo
 effects:
   - Deals 380% damage to the target and nearby enemies.
   - All allies get Sticky Surface for 3 turns. This effect can't be dispelled.
-  - "Sticky Surface: Steals 1 random dispellable buff from an attacking enemy. (Stolen dispellable buff or Growth effect is chosen by random. Sticky Surface is activated when any damage is received from an enemy. Each character with Sticky Surface can only steal one status effect buff or Growth effect per turn from normal attacks.)"
+  - 'Sticky Surface: Steals 1 random dispellable buff or Growth effect from an attacking enemy. (Stolen dispellable buff or Growth effect is chosen by random. Sticky Surface is activated when any damage is received from an enemy. Each character with Sticky Surface can only steal one status effect buff or Growth effect per turn from normal attacks.)'
 types:
   - Hit 3
-  - Sticky Surface All
+  - Sticky Surface Buff All
 passives:
   - >-
     Slime Minion Upon Defeat: When this character is defeated, they summon Slime Mega Minions to nearby allies with 50% HP and 40% attack inherited from this character.
