--- a/data/heroes/purple/3/Betty.yml
+++ b/data/heroes/purple/3/Betty.yml
@@ -10,7 +10,7 @@ health: 783
 skill: Pointy Darts
 effects:
   - Deals 210% damage to target and nearby enemies.
-  - Nearby allies receive Softskin. (The next time they receive damage, it is reduced by -90%, and they resist all status ailment and mana reduction. This effect can't be dispelled.)
+  - Nearby allies receive Softskin. (The next time they receive damage, it is reduced by -90%. They are also immune to all status ailments, mana reductions and Insanity. This effect can't be dispelled.)
 types:
   - Hit 3
   - Softskin 2
