--- a/data/heroes/red/5/Guffa.yml
+++ b/data/heroes/red/5/Guffa.yml
@@ -11,13 +11,13 @@ skill: Reflecting Stance
 effects:
   - The caster gets Taunt that prevents enemies from using Special Skills on the caster's allies for 4 turns.
   - The caster gets +40% mana generation for 4 turns. (Affects only mana generated from matching tiles or mana gained by the defense team at the end of their turn.)
-  - All allies except the caster receive a Softskin. (The next time they receive damage, it is reduced by -90%, and they resist all status ailment and mana reduction. This effect can't be dispelled.)
+  - All allies except the caster receive Softskin. (The next time they receive damage, it is reduced by -90%. They are also immune to all status ailments, mana reductions and Insanity. This effect can't be dispelled.)
   - All allies recover 1400 health after 4 turns or instantly if the skill is cast again before the duration ends. This effect cannot be dispelled.
 types:
   - Taunt
-  - Mana generation buff 1
-  - Softskin except self
-  - Delayed Healer
+  - Self Mana Generation Buff
+  - Softskin 4
+  - Delayed Healer All
 passives:
   - "Gargoyle's Softskin: Every time this Gargoyle casts a Special Skill, their Softskin activates. The next 5 times they receive damage, it is reduced by -90%. They are also immune to all status ailments, mana reductions and Insanity. This effect can't be dispelled."
 image: https://i.imgur.com/i3PGL4o.jpg
