--- a/data/sources/158-vigilant.yml
+++ b/data/sources/158-vigilant.yml
@@ -1,4 +1,4 @@
-key: vigilant
+key: valiant
 code: 158
-description: Vigilant Vegetables Event
-descriptionLong: Vigilant Vegetables Challenge Event. Featuring Vigilant Vegetables with Evolving Fiends!
+description: Valiant Vegetables Event
+descriptionLong: Valiant Vegetables Challenge Event. Featuring Valiant Vegetables with Evolving Fiends!
