--- a/data/heroes/red/5/Bartholomew.yml
+++ b/data/heroes/red/5/Bartholomew.yml
@@ -18,13 +18,14 @@ types:
   - Harvest Buffs 3
   - Counterattack 3
 passives:
-  - >-
-    Empowered Resist Special Skill Blocking: This character is immune to status ailments that prevent the use of Special Skills. They also gain 450 boosted health and 5% mana each time they resist.
-  - >-
-    Seedling Summoner: Summons a Seedling Fiend every turn to a random enemy
-  - " * The Seeding Fiend evolves into a Sprout Fiend after 2 turns."
-  - " * The Sprout Fiend evolves into a Blossom Mega Fiend after 2 turns."
-  - " 1) Seedling Fiend: 50% attack, 15% health"
-  - " 2) Sprout Fiend: 75% attack, 25% health"
-  - " 3) Blossom Mega Fiend: 250% attack, 60% health"
+- 'Empowered Resist Special Skill Blocking: This character is immune to status ailments
+  that prevent the use of Special Skills. They also gain 450 boosted health and 5%
+  mana each time they resist.'
+- 'Seedling Summoner: Summons a Seedling Fiend every turn to a random enemy.'
+- ' * The Seedling Fiend evolves into a Sprout Fiend after 2 turns.'
+- ' * The Sprout Fiend evolves into a Blossom Mega Fiend after 2 turns.'
+- ' * The evolution of the Fiends is delayed by 1 turn each time they absorb healing.'
+- ' 1) Seedling Fiend: 50% attack, 20% health'
+- ' 2) Sprout Fiend: 75% attack, 30% health'
+- ' 3) Blossom Mega Fiend: 250% attack, 60% health'
 image: https://imgur.com/jASZVDz.jpg
