--- a/data/families/96-nidavellir.yml
+++ b/data/families/96-nidavellir.yml
@@ -6,6 +6,6 @@ bonus:
   - "Members of this realm have a Molten Core."
   - "The Molten Core is charged each time this character receives damage from normal attacks or Special Skills."
   - "The members of this realm have additional perks in Untold Tales II: Treasures of Flame and Frost stages."
-bonuscostume-5star: 
+bonuscostume-5star: 10/10/11/5
 bonuscostume-4star: 
 bonuscostume-3star:  
