--- a/data/heroes/purple/5/Prof Morryster.yml
+++ b/data/heroes/purple/5/Prof Morryster.yml
@@ -11,13 +11,13 @@ skill: Seeking Shots
 effects:
   - Deals 460% damage to the target and nearby enemies and inflicts 50 Insanity on them.
   - Inflicts the target and nearby enemies with Minion Corruption for 4 turns, that adds a chance of Minions transforming into Fiends. This effect is uncleansable.
-  - The target and nearby enemies get -44% defense against Special Skills for 4 turns.
-  - Inflicts 50 Insanity to the caster.
+  - The target and nearby enemies get -44% defense for 4 turns.
+  - Inflicts 45 Insanity to the caster.
 types:
   - Hit 3
   - Insanity 3
   - Minion Corruption 3
-  - SS Defense Debuff 3
+  - Defense Debuff 3
   - Self Insanity
 passives:
   - >-
