--- a/data/heroes/red/4/Mael.yml
+++ b/data/heroes/red/4/Mael.yml
@@ -11,11 +11,11 @@ skill: Sparking Star Slash
 effects:
   - Deals 285% damage to the target.
   - Has 60% chance for additional hits on random enemies up to 3 times. Additional hits deals minor damage.
-  - Hit enemies receive Resonance for 3 turns. Resonance deals 125 damage each turn. Resonance deals additional damage that reverberates to 3 random enemies. (Damage can't reverberate on the same target twice in a row. Reverberating damage is reduced after each hit.)
+  - Hit enemies receive Resonance for 3 turns. Each turn, Resonance deals 190 damage to the afflicted enemies and 95 damage to nearby enemies.
 types:
   - Hit 1
   - Possible Extra Hits
-  - Resonance DoT 1
+  - Resonance DoT on hit
 passives:
   - >-
     Hinder Mana: Reduces the amount of mana increased by Special Skills, Passive Skills, family bonuses and status effects by -80%. The effect applies to all enemies in battle.
