--- a/data/heroes/red/5/Iarlaith.yml
+++ b/data/heroes/red/5/Iarlaith.yml
@@ -10,8 +10,8 @@ health: 2173
 skill: Ring Around the Rosie
 effects:
   - Deals 600% damage to the target.
-  - The target receives 100% damage for all the damage their allies receive for 3 turns.
-  - "Stack (Max: 10): All damage all enemies is increased by +8%."
+  - For 3 turns, the target receives 100% of all damage dealt to their allies.
+  - "Stack (Max: 10): All damage all enemies receive is increased by +8%."
 types:
   - Hit 1
   - Damage Link 1
