--- a/data/heroes/red/5/Wilcox.yml
+++ b/data/heroes/red/5/Wilcox.yml
@@ -10,10 +10,10 @@ health: 2241
 skill: Volatile Crystal Conduit
 effects:
   - Deals 265% damage to the target.
-  - The attack chains through all the enemies who are adjacent to any hit enemy.
+  - The attack chains through all the enemies who are adjacent to any hit enemy and bypasses defensive buffs.
   - All hit targets 20 Insanity every time they are hit.
   - After 1 turn the target gets Paralyzed for4 turns. (Paralyzed enemies can't attack or gain mana and receive +50% increased damage. Once Paralyzed, the effect can't be cleansed. Bosses, Titans and Mythic Titans are not affected by this status effect.)
-  - Inflicts 45 Insanity on the caster.
+  - Inflicts 40 Insanity on the caster.
 types:
   - Hit 1
   - Chain Hit
