--- a/data/heroes/yellow/5/Ibelis.yml
+++ b/data/heroes/yellow/5/Ibelis.yml
@@ -11,9 +11,11 @@ skill: Sickle Trouble
 effects:
   - Deals 310% damage to  enemies on the edges of the enemy formation. If there is only one enemy, the damage is doubled.
   - Reduces the mana of the enemies on the edges of the enemy formation by 20%. If there is only one enemy, the mana reduction is doubled.
-  - The enemies on the edges of the formation receive Resonance for 2 turns. Resonance deals 493 damage each turn. Resonance deals 493 additional damage that reverberates to 2 random enemies (Damage can't reverberate on the same target twice in a row. Reverberating damage is reduced after each hit.)
+  - Enemies on the edges of the formation receive Resonance for 2 turns. Each turn, Resonance deals 1000 damage to the afflicted enemies and 500 damage to nearby enemies.
 types:
-  - 
+  - Hit 2
+  - Mana Reducer 2
+  - Resonance DoT on hit
 passives:
   - >-
     Hinder Mana: Reduces the amount of mana increased by Special Skills, Passive Skills, family bonuses and status effects by -80%. The effect applies to all enemies in battle.
